<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.7</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>dev.ted</groupId>
  <artifactId>jittertravel</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>jittertravel</name>
  <description>jittertravel</description>
  <url/>
  <licenses>
    <license/>
  </licenses>
  <developers>
    <developer/>
  </developers>
  <scm>
    <connection/>
    <developerConnection/>
    <tag/>
    <url/>
  </scm>
  <properties>
    <java.version>26</java.version>
    <spring-modulith.version>2.0.6</spring-modulith.version>
    <playwright.version>1.49.0</playwright.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.modulith</groupId>
      <artifactId>spring-modulith-starter-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.modulith</groupId>
      <artifactId>spring-modulith-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-docker-compose</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-postgresql</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>digital.pragmatech.testing</groupId>
      <artifactId>spring-test-profiler</artifactId>
      <version>0.1.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.j2html</groupId>
      <artifactId>j2html</artifactId>
      <version>1.6.0</version>
    </dependency>
    <!-- JS-behavior tests only (see docs/JS-Behavior-Tests.md). Tagged "js" and
         excluded from the default build; run with `mvn test -Pjs-tests`. -->
    <dependency>
      <groupId>com.microsoft.playwright</groupId>
      <artifactId>playwright</artifactId>
      <version>${playwright.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- SPIKE: Strictland event-serialization contract testing.
         See docs/Event_Serialization_Contract_Tests.md. Evaluate, then keep or remove. -->
    <dependency>
      <groupId>io.event-driven</groupId>
      <artifactId>strictland</artifactId>
      <version>0.3.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.modulith</groupId>
        <artifactId>spring-modulith-bom</artifactId>
        <version>${spring-modulith.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- The default build skips JS-behavior tests (browser binaries) and the boot-replay
           preflight (needs a production dump to hand). Run them explicitly with `mvn test -Pjs-tests`
           / `mvn test -Preplay-preflight -Dpreflight.dump=…`. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <excludedGroups>js,replay-preflight</excludedGroups>
          <!-- Pin the test JVM to UTC so timezone-dependent tests behave the same
               on every machine and on CI, regardless of the host's default zone. -->
          <argLine>-Duser.timezone=UTC</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <!-- Bootstrap the tracked git hooks: point core.hooksPath at .githooks so the
           pre-push MUST-PASS gate runs after a fresh clone without the manual
           `git config core.hooksPath .githooks` (see README).

           Two layers keep a non-git build (Railway's /app source copy, a release
           tarball) green: (1) the profile activates ONLY when a .git directory is
           present, so it normally doesn't run there at all; (2) the command itself
           is `sh -c "… || true"`, so even if a .git dir does reach a git-less build
           image the step is a harmless no-op. Both matter because the exec goal has
           no failOnError, so invoking a missing `git` binary directly would throw
           IOException and fail the build outright — which is what broke a deploy. -->
      <id>install-git-hooks</id>
      <activation>
        <file>
          <exists>.git</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.6.3</version>
            <executions>
              <execution>
                <id>install-git-hooks-path</id>
                <phase>initialize</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <!-- Run via `sh -c … || true` rather than invoking git directly:
                       the exec goal has no failOnError, so a missing `git` binary would
                       otherwise throw IOException and fail the build. The `|| true`
                       swallows a missing-git (or any) failure, so even if a .git dir
                       reaches a git-less build image the step is a no-op instead of a
                       hard failure. `sh` is present on every dev/CI unix host. -->
                  <executable>sh</executable>
                  <arguments>
                    <argument>-c</argument>
                    <argument>git config core.hooksPath .githooks || true</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <!-- Runs ONLY the "js" group. First run auto-downloads the Chromium binary. -->
      <id>js-tests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups combine.self="override"></excludedGroups>
              <groups>js</groups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- Runs ONLY the boot-replay preflight. Point it at a backup dump:
           `mvn test -Preplay-preflight -Dpreflight.dump=/path/to/backup.json`.
           With no dump the single test skips. -->
      <id>replay-preflight</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups combine.self="override"></excludedGroups>
              <groups>replay-preflight</groups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
